syntax = "proto3";

option csharp_namespace = "TodoService.Services";

import "google/protobuf/timestamp.proto";

package todo;

service TodoList {
  rpc Add (AddRequest) returns (AddReply);
  rpc GetAll (GetAllRequest) returns (GetAllReply);
}

message AddRequest {
  string title = 1;
  google.protobuf.Timestamp due_date = 2;
}

message AddReply {
  TodoMessage item = 1;
}
message GetAllRequest {
}

message GetAllReply {
  repeated TodoMessage items = 1;
}

message TodoMessage{
	string id = 1;
	string title = 2;
	google.protobuf.Timestamp due_date = 3;
	bool is_completed = 4;
}